--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.11",
+    "@chakra-ui/react": "^2.3.6",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "axios": "^1.1.3",
+    "framer-motion": "^7.6.2",
+    "md5": "^2.3.0",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
